--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,9 @@
 
 .App {
   text-align: center;
-  width: 100vw;
+  width: 98vw;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-header {
