--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #000000;
   background-color: #242424;
 
   font-synthesis: none;
@@ -14,8 +14,9 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 900;
+  color: black;
+
   text-decoration: inherit;
 }
 a:hover {
@@ -28,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding: 0;
 }
 
 h1 {
