--- a/src/pages/paciente.css
+++ b/src/pages/paciente.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #2c2c2c;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
     color: #e0e0e0;
@@ -10,19 +10,18 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #3c3c3c;
+    background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   header {
     text-align: center;
-    margin-bottom: 20px;
   }
   
   header h1 {
     font-size: 2em;
-    color: #fff;
+    color: black;
   }
   
   table {
@@ -35,24 +34,24 @@ body {
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid #555;
-    color: #e0e0e0;
+    color: black;
   }
   
   table th {
-    background-color: #444;
-    color: #fff;
+    background-color: white;
+    color: black;
   }
   
   table tbody tr:nth-child(odd) {
-    background-color: #3c3c3c;
+    background-color: white;
   }
   
   table tbody tr:nth-child(even) {
-    background-color: #4c4c4c;
+    background-color: white;
   }
   
   table tbody tr:hover {
-    background-color: #5c5c5c;
+    background-color: white;
   }
   
   .header {
@@ -64,7 +63,7 @@ body {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: #ffffff; /* cor do texto */
+    color: black;
     margin-right: 10px; /* espaçamento entre o ícone e o texto */
     font-size: 24px;
   }
