--- a/src/App.css
+++ b/src/App.css
@@ -66,15 +66,18 @@ body {
   background-color: #f0f0f0;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .container {
-  max-width: 800px;
+  width: 95vw;
   margin: 0 auto;
-  padding: 20px;
+  /* width: 80%; */
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 header {
@@ -128,4 +131,9 @@ table tr:hover {
 
 .paciente-detalhes div p {
   margin: 10px 0;
+  color: black;
+}
+
+p {
+  color: black;
 }
