--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -245,4 +245,23 @@ a:hover {
     color: #12708a;
 }
 
+
+button {
+    padding: 10px 20px;
+    background-color: #0d6b85;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    height: 50px;
+  }
   
+  button:hover {
+    background-color: #21a1f1;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+}
