--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -255,6 +255,7 @@ button {
     cursor: pointer;
     width: 100%;
     height: 50px;
+    font-size: 1em;
   }
   
   button:hover {
@@ -264,4 +265,17 @@ button {
 input {
     width: 100%;
     padding: 10px;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: large;
+    background-color: white;
+    border-color: #12708a;
+    min-width: 450px;
+    max-width: 450px;
+    height: 50px;
 }
+
